--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <h1>Rock Paper Scissors/</h1>
+    <h1>Rock Paper Scissors</h1>
 </body>
 </html>
