--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <button id="rockButton">Rock</button>
     <button id="paperButton">Paper</button>
     <button id="scissorsButton">Scissors</button>
+    <div></div>
 </body>
 </html>
